--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,19 @@ target
 /.project
 /.settings
 /RUNNING_PID
+/RUNNING_PID
+# Ignore Play! working directory #
+bin/
+.eclipse
+/lib/
+/logs/
+/modules
+/project/project
+/project/target
+/target
+tmp/
+test-result
+server.pid
+*.eml
+/dist/
+.cache
