adding person model
adding person model

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -12,6 +12,7 @@ liquibase.actions=update
 liquibase.changelog=conf/db/changelog.xml
 liquibase.scanner=jar
 db.default.jndiName=DefaultDS
+jpa.default=defaultPersistenceUnit
 
 fixedConnectionPool = 9
 database.dispatcher {
