--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,9 +2,10 @@
 # https://www.playframework.com/documentation/latest/ConfigFile
 # mysql config
 db.default.driver=com.mysql.cj.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/freshresumes_development?createDatabaseIfNotExist=true"
-db.default.username=root
-db.default.password=""
+db.default.url=${DATABASE_URL}
+; db.default.url="jdbc:mysql://localhost/freshresumes_development?createDatabaseIfNotExist=true"
+db.default.username=${DATABASE_USER}
+db.default.password=${DATABASE_PASSWORD}
 db.default.migration.initOnMigrate=true
 liquibase.enable=true
 liquibase.active=true
