--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,8 +2,8 @@
 # https://www.playframework.com/documentation/latest/ConfigFile
 # mysql config
 db.default.driver=com.mysql.cj.jdbc.Driver
-db.default.url=${DATABASE_URL}
-; db.default.url="jdbc:mysql://localhost/freshresumes_development?createDatabaseIfNotExist=true"
+db.default.url=jdbc:${DATABASE_URL}
+# db.default.url="jdbc:mysql://localhost/freshresumes_development?createDatabaseIfNotExist=true"
 db.default.username=${DATABASE_USER}
 db.default.password=${DATABASE_PASSWORD}
 db.default.migration.initOnMigrate=true
