--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,11 +2,10 @@
 # https://www.playframework.com/documentation/latest/ConfigFile
 # mysql config
 db.default.driver=com.mysql.cj.jdbc.Driver
-db.default.protocol="jdbc:"
-db.default.url=${db.default.protocol}${DATABASE_URL}
-# db.default.url="jdbc:mysql://localhost/freshresumes_development?createDatabaseIfNotExist=true"
-db.default.username=${DATABASE_USER}
-db.default.password=${DATABASE_PASSWORD}
+db.default.url=${JDBC_DATABASE_URL}
+#db.default.url="jdbc:mysql://localhost/freshresumes_development?createDatabaseIfNotExist=true&user=root&password="
+#db.default.username=${DATABASE_USER}
+#db.default.password=${DATABASE_PASSWORD}
 db.default.migration.initOnMigrate=true
 liquibase.enable=true
 liquibase.active=true
