adding app secret
adding app secret

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,6 +6,8 @@ db.default.url=${JDBC_DATABASE_URL}
 #db.default.url="jdbc:mysql://localhost/freshresumes_development?createDatabaseIfNotExist=true&user=root&password="
 #db.default.username=${DATABASE_USER}
 #db.default.password=${DATABASE_PASSWORD}
+play.http.secret.key=${?APPLICATION_SECRET_NAME}
+play.http.secret.key=${?APPLICATION_SECRET}
 db.default.migration.initOnMigrate=true
 liquibase.enable=true
 liquibase.active=true
