--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,7 +16,7 @@ liquibase.changelog=conf/db/changelog.xml
 liquibase.scanner=jar
 db.default.jndiName=DefaultDS
 jpa.default=defaultPersistenceUnit
-
+play.db.prototype.hikaricp.maximumPoolSize = 5
 fixedConnectionPool = 5
 database.dispatcher {
   executor = "thread-pool-executor"
