--- a/conf/application.conf
+++ b/conf/application.conf
@@ -26,4 +26,8 @@ database.dispatcher {
   }
 }
 
+play.filters.enabled += play.filters.hosts.AllowedHostsFilter
+play.filters.hosts {
+  allowed = ["freshresumes.herokuapp.com", "localhost:9000"]
+}
 # play.evolutions.enabled=false
