--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,7 +2,7 @@
 # https://www.playframework.com/documentation/latest/ConfigFile
 # mysql config
 db.default.driver=com.mysql.cj.jdbc.Driver
-db.default.url=${JDBC_DATABASE_URL}
+db.default.url=${JDBC_DATABASE_URL} # add this property in command line
 #db.default.url="jdbc:mysql://localhost/freshresumes_development?createDatabaseIfNotExist=true&user=root&password="
 #db.default.username=${DATABASE_USER}
 #db.default.password=${DATABASE_PASSWORD}
@@ -16,8 +16,8 @@ liquibase.changelog=conf/db/changelog.xml
 liquibase.scanner=jar
 db.default.jndiName=DefaultDS
 jpa.default=defaultPersistenceUnit
-play.db.prototype.hikaricp.maximumPoolSize = 5
-fixedConnectionPool = 5
+play.db.prototype.hikaricp.maximumPoolSize = 5 # specially for herokuapp as db connection max is 10
+fixedConnectionPool = 5 # specially for herokuapp as db connection max is 10
 database.dispatcher {
   executor = "thread-pool-executor"
   throughput = 1
