--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,7 +3,7 @@
 # mysql config
 db.default.driver=com.mysql.cj.jdbc.Driver
 db.default.url=${JDBC_DATABASE_URL} # add this property in command line
-#db.default.url="jdbc:mysql://localhost/freshresumes_development?createDatabaseIfNotExist=true&user=root&password="
+#db.default.url="jdbc:mysql://bdc3a87d744ae6:471ecd74@us-cdbr-iron-east-04.cleardb.net/heroku_9f1b94aa94f821b?reconnect=true&user=bdc3a87d744ae6&password=471ecd74"
 #db.default.username=${DATABASE_USER}
 #db.default.password=${DATABASE_PASSWORD}
 play.http.secret.key=${?APPLICATION_SECRET_NAME}
