--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,4 +30,5 @@ play.filters.enabled += play.filters.hosts.AllowedHostsFilter
 play.filters.hosts {
   allowed = ["freshresumes.herokuapp.com", "localhost:9000"]
 }
+play.filters.enabled += "play.filters.csrf.CSRFFilter"
 # play.evolutions.enabled=false
